--- a/src/app/modules/pages/profile_page/ProfilePage.component.html
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="userInfo">
     <div class="userPicture">
-      <div class="pictureBox">
-        <img [src]="profileImageUrl + '/' + user.profile_image" (click)="goEditProfile()" alt="User Profile Picture">
+      <div class="pictureBox" [ngClass]="{'clickable': checkIsUser()}">
+        <img [src]="profileImageUrl + '/' + user.profile_image" (click)="checkIsUser() ? goEditProfile() : null" alt="User Profile Picture">
       </div>
     </div>
     <div class="userBio">
