Implementing delete comment API in frontEnd

--- a/src/app/modules/pages/post_details/PostDetails.component.css
+++ b/src/app/modules/pages/post_details/PostDetails.component.css
@@ -152,6 +152,10 @@
 	margin-bottom: 50px;
 }
 
+.removeComment {
+	margin-left: 550px;
+}
+
 .myInfo {
 	display: inline-block;
 	padding-bottom: 10px;
