--- a/src/app/modules/pages/profile_page/ProfilePage.component.html
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="userInfo">
-    <div class="userPicture">
+    <div class="userPicture" width="100%" height="100%">
       <div class="pictureBox" [ngClass]="{'clickable': checkIsUser()}">
-        <img [src]="profileImageUrl + '/' + user.profile_image" (click)="checkIsUser() ? goEditProfile() : null" alt="User Profile Picture">
+        <img [src]="profileImageUrl + '/' + user.profile_image" (click)="checkIsUser() ? goEditProfile() : null" alt="User Profile Picture" >
       </div>
     </div>
     <div class="userBio">
