--- a/src/app/modules/elements/header/Header.component.css
+++ b/src/app/modules/elements/header/Header.component.css
@@ -1,5 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 
+img{
+  border-radius: 50%;
+}
+
 .Header{
   padding-top: 80px;
 }
