--- a/src/app/modules/elements/header/Header.component.html
+++ b/src/app/modules/elements/header/Header.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
     <div class="container">
 
-      <a class="navbar-brand logo" (click)="goHome()"><img src="assets/icon.png" alt="Amima logo" height="45" width="45"></a>
+      <a class="navbar-brand logo" href="/"><img src="assets/icon.png" alt="Amima logo" height="45" width="45"></a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
