--- a/src/app/modules/pages/post_details/PostDetails.component.css
+++ b/src/app/modules/pages/post_details/PostDetails.component.css
@@ -237,6 +237,11 @@
 	margin: 10px;
 }
 
+.charLabel {
+	float: left;
+	font-size: 15px;
+}
+
 
 @media (max-width: 768px){
 	.container{
@@ -420,6 +425,11 @@
 		width: 100%;
 		opacity: 0.2;
 		margin: 10px;
+	}
+
+	.charLabel {
+		float: left;
+		font-size: 15px;
 	}
 
 }
