--- a/src/app/modules/elements/card/Card.component.html
+++ b/src/app/modules/elements/card/Card.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="card">
+  <div class="card" (click)="goToPostPage()">
     <!--image section-->
     <div class="imgBox">
       <a (click)="goToPostPage()" style="cursor: pointer;">
