comment only when signedIn

--- a/src/app/modules/pages/post_details/PostDetails.component.html
+++ b/src/app/modules/pages/post_details/PostDetails.component.html
@@ -19,10 +19,10 @@
             {{currentUser.user_name}}
           </div>
         </div>
-        <input class="inputComment" type="text" placeholder="Comment" name="" [(ngModel)]="commentContent" #ctrl="ngModel" required>
+        <input class="inputComment" type="text" (click)="goHome()" placeholder="Comment" name="" [(ngModel)]="commentContent" #ctrl="ngModel" required>
         <div class="confirmationButtons">
           <div class="confirmComment">
-            <button class="createComment" (click)="createComment()">Comment</button>
+            <button class="createComment" (click)="goHome(); createComment();">Comment</button>
           </div>
         </div>
       </div>
