collapse hamburger nav on click

--- a/src/app/modules/elements/header/Header.component.html
+++ b/src/app/modules/elements/header/Header.component.html
@@ -13,31 +13,39 @@
           <li>
             <input class="form-control buttonStyleBlack" [(ngModel)]="searchContent" maxlength="100" type="search" >
           </li>
-          <a class="btn btn-light action-button buttonStyleBlack searchBtn" (click)="searchFunc()" role="button">Search</a>
+          <a class="btn btn-light action-button buttonStyleBlack searchBtn" (click)="searchFunc()" role="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
+            Search
+          </a>
         </ul>
 
         <ul class="navbar-nav ms-sm-auto">
             <li class="nav-item">
-                <a class="nav-link linkStyleRed" (click)="goNewPost()">Create Post</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link linkStyleRed" (click)="goAbout()">About Us</a>
-            </li>
-            <li class="nav-item">
-              <div *ngIf="loggedIn; then signedIn else signedOut"></div>
-              <ng-template #signedIn class="signInIcon">
-                <a class="nav-link" (click)="goProfile()">
-                  <img id="userIcon"
-                       [src]="profileImage"
-                       height="30px" width="30px"
-                       alt="Icon"
-                       title="See your profile"
-                  >
+                <a class="nav-link linkStyleRed" (click)="goNewPost()" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
+                  Create Post
                 </a>
-              </ng-template>
-              <ng-template #signedOut class="signOutIcon">
-                <a class="btn btn-light action-button linkStyleRed signIn" role="button" (click)="goLogin()">Sign In</a>
-              </ng-template>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link linkStyleRed" (click)="goAbout()" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
+                  About Us
+                </a>
+            </li>
+            <li class="nav-item">
+              <div *ngIf="loggedIn" class="signInIcon">
+                  <a class="nav-link" (click)="goProfile()">
+                    <img id="userIcon"
+                         [src]="profileImage"
+                         height="30px" width="30px"
+                         alt="Icon"
+                         title="See your profile"
+                         data-bs-toggle="collapse" 
+                         data-bs-target=".navbar-collapse.show">
+                  </a>
+              </div>
+              <div *ngIf="!loggedIn" class="signOutIcon">
+                  <a class="btn btn-light action-button linkStyleRed signIn" role="button" (click)="goLogin()" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
+                    Sign In
+                  </a>
+              </div>
             </li>
         </ul>
       </div>
