Change keywords color

--- a/src/app/modules/pages/post_details/PostDetails.component.css
+++ b/src/app/modules/pages/post_details/PostDetails.component.css
@@ -103,7 +103,7 @@
 
 .title{
 	font-size: 30px;
-	color:black;    
+	color:black;
     text-shadow: 1px 0 black;
     letter-spacing:1px;
 	font-family: Raleway;
@@ -127,7 +127,7 @@
 
 .hashTagItem{
 	font-size: 15px;
-	background-color: rgb(249,249,249);
+	background-color: #f0f0f0;
 	border-radius: 3px;
 	padding: 3px 15px;
 	margin: 0px 10px;
@@ -291,25 +291,25 @@
 	.commentSection{
 		width: 100%;
 	}
-	
+
 	.myComment {
 		width: 100%;
 	}
-	
+
 	.myInfo {
 		display: inline-block;
 		padding-bottom: 10px;
 	}
-	
+
 	.myName {
 		width: 100%;
 	}
-	
+
 	.profilePic {
 		width: 30px;
 		margin-right: 10px;
 	}
-	
+
 	.inputComment {
 		width: 100%;
 	}
