--- a/src/app/modules/pages/create_post/CreatePost.component.html
+++ b/src/app/modules/pages/create_post/CreatePost.component.html
@@ -1,17 +1,13 @@
 <div>
   <div class="container">
     <div class="row">
-      <div *ngIf="modeParam == 'edit'; then editTitle else newTitle"></div>
-      <ng-template #editTitle>
-        <div class="sectionContainer">
-          <h1>Edit Post</h1>
-        </div>
-      </ng-template>
-      <ng-template #newTitle>
-        <div class="sectionContainer">
-          <h1>New Post</h1>
-        </div>
-      </ng-template>
+      <div *ngIf="modeParam == 'edit'">
+        <h1 class="sectionContainer">Edit Post</h1>
+      </div>
+      
+      <div *ngIf="!(modeParam == 'edit')">
+        <h1 class="sectionContainer">New Post</h1>
+      </div>
 
       <div class="sectionContainer">
         Images:
@@ -32,19 +28,16 @@
         <div>
           <textarea class="revDescripTextBox" [(ngModel)]="post.content" maxlength="{{ txtLimit }}" rows="4" placeholder="Your review goes here..."></textarea>
         </div>
-        <div *ngIf="100 >txtLimit - post.content.length; then charLim"></div>
-        <ng-template #charLim class="charLabel">
-          <label>{{txtLimit - post.content.length}}/{{txtLimit}}</label>
-        </ng-template>
+        <div *ngIf="100 >txtLimit - post.content.length">
+          <label class="charLabel">{{txtLimit - post.content.length}}/{{txtLimit}}</label>
+        </div>
         <br>
-
-        <div *ngIf="modeParam == 'edit'; then editPost else newPost"></div>
-        <ng-template #newPost>
-          <button class="postButton" (click)="createPost()">Post</button>
-        </ng-template>
-        <ng-template #editPost>
+        <div *ngIf="modeParam == 'edit'">
           <button class="postButton" (click)="createPost()">Save</button>
-        </ng-template>
+        </div>
+        <div *ngIf="!(modeParam == 'edit')">
+          <button class="postButton" (click)="createPost()">Post</button>
+        </div>
         <button class="cancelButton" (click)="goToPostPage()">Cancel</button>
       </div>
     </div>
