snack bar stuff

--- a/src/app/modules/pages/create_post/CreatePost.component.html
+++ b/src/app/modules/pages/create_post/CreatePost.component.html
@@ -13,6 +13,9 @@
         </div>
       </ng-template>
 
+      <button (click)="myFunction()">Show Snackbar</button>
+      <div id="snackbar">Good question Hanson damnn shooooooooooooooooooooooooooooooooooooooooooooooon</div>
+
       <div class="sectionContainer">
         Images:
         <ImageUploader (changeEvent)="updateImages($event)" [images]="images"></ImageUploader>
