--- a/src/app/modules/pages/edit_profile/EditProfile.component.html
+++ b/src/app/modules/pages/edit_profile/EditProfile.component.html
@@ -22,15 +22,15 @@
             <input type="text" placeholder="Bio" name="" [(ngModel)]="currentUser.bio" #ctrl="ngModel" required>
         </div>
         <div class="info-btn">
-            <fa-icon [icon]="faQuestionCircle" class="info-icon3"  title="Info button"></fa-icon>
+            <fa-icon [icon]="faQuestionCircle" class="info-icon3"  title="Bio"></fa-icon>
             <span class="tooltiptext">A brief description of yourself</span>
         </div>
         <div class="info-btn">
-            <fa-icon [icon]="faQuestionCircle" class="info-icon2"  title="Info button"></fa-icon>
+            <fa-icon [icon]="faQuestionCircle" class="info-icon2"  title="Email"></fa-icon>
             <span class="tooltiptext">Your Email & Email-ID</span>
         </div>
         <div class="info-btn">
-            <fa-icon [icon]="faQuestionCircle" class="info-icon1"  title="Info button"></fa-icon>
+            <fa-icon [icon]="faQuestionCircle" class="info-icon1"  title="Username"></fa-icon>
             <span class="tooltiptext">Your User Name</span>
         </div>
 
