--- a/src/app/modules/elements/author_card/AuthorCard.component.css
+++ b/src/app/modules/elements/author_card/AuthorCard.component.css
@@ -21,9 +21,13 @@
 
 .authorName{
   width: 70%;
-  padding-top: 11%;
+  padding-top: 20px;
   color: black;
   margin: 1% 3% 1% 3%;
+}
+
+.authorBio {
+  color: indigo;
 }
 
 .authorImg{
@@ -32,9 +36,10 @@
   float: left;
   margin: 1% 3% 1% 3%;
 }
+
 img{
-  width: 85%;
-  height: 85%;
+  width: 100%;
+  max-height: 85%;
   aspect-ratio: 1/1.2;
   border-radius: 50%;
 
@@ -79,14 +84,7 @@ img{
     margin-bottom: 0px;
     margin: 2% 3% 0% 3%;
   }
-  img{
-    width: 75%;
-    height: 75%;
-    aspect-ratio: 1/1;
-    border-radius: 50%;
-    margin-bottom: 0px;
 
-  }
   .authorInfo a {
     color: black;
     text-decoration: none;
