--- a/src/app/modules/elements/author_card/AuthorCard.component.html
+++ b/src/app/modules/elements/author_card/AuthorCard.component.html
@@ -1,12 +1,13 @@
 <div class="authorCard" (click)="goToProfilePage()">
   <div class="authorInfo">
-      <div class="authorImg">
-        <img [src]="user.profile_image ? profileImgUrl + '/' + user.profile_image : ''" >
-      </div>
-      <div class="authorName">
-        <a>
-          <p>{{user.user_name}}</p>
-        </a>
-      </div>
+    <div class="authorImg">
+      <img [src]="user.profile_image ? profileImgUrl + '/' + user.profile_image : ''" >
+    </div>
+    <div class="authorName">
+      <a>
+        <p>{{user.user_name}}</p>
+        <p class="authorBio">{{user.bio.length > 45 ? user.bio.slice(0, 45) + '...' : user.bio}}</p>
+      </a>
+    </div>
   </div>
 </div>
