--- a/src/app/modules/elements/author_card/AuthorCard.component.css
+++ b/src/app/modules/elements/author_card/AuthorCard.component.css
@@ -4,6 +4,16 @@
   cursor: pointer;
 }
 
+.card-title {
+  margin-left: 10px;
+  color: rgb(66, 63, 63);
+}
+
+.splitter {
+  margin: 0;
+  border: solid 1px rgba(134, 134, 134, 0.472);
+}
+
 .author{
   color: black;
   margin: 1% 3% 1% 3%;
