--- a/src/app/modules/elements/author_card/AuthorCard.component.html
+++ b/src/app/modules/elements/author_card/AuthorCard.component.html
@@ -1,4 +1,8 @@
 <div class="authorCard" (click)="goToProfilePage()">
+  <div class="card-title">
+    About the Author
+  </div>
+  <hr class="splitter">
   <div class="authorInfo">
     <div class="authorImg">
       <img [src]="user.profile_image ? profileImgUrl + '/' + user.profile_image : ''" >
