--- a/src/app/modules/pages/post_details/PostDetails.component.css
+++ b/src/app/modules/pages/post_details/PostDetails.component.css
@@ -37,6 +37,7 @@
 
 .favouriteReg {
   margin-top: 15px;
+  text-align: center;
 }
 
 .favouriteReg a {
@@ -52,9 +53,10 @@
 	font-size: 20px;
   margin-top: 15px;
 	color: rgb(252, 191, 7);
+  text-align: center;
 }
 
-.favouriteSolid:hover {
+.favouriteSolid a:hover {
 	color: salmon;
 	cursor: pointer;
 }
@@ -110,10 +112,6 @@
 	width: 100%;
 }
 
-.profilePic {
-	margin-right: 10px;
-}
-
 .inputComment {
 	width: 100%;
 	background: transparent;
@@ -159,6 +157,16 @@
 .profileImg {
 	margin-right: 10px;
 	margin-top: 10px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition-duration: 0.3s;
+}
+
+.profileImg:hover {
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  transition-duration: 0.3s;
 }
 
 .nameDate {
