Remove logo from header

--- a/src/app/modules/elements/header/Header.component.html
+++ b/src/app/modules/elements/header/Header.component.html
@@ -2,7 +2,10 @@
   <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
     <div class="container">
 
-      <a class="navbar-brand logo" href="/"><img src="assets/icon.png" alt="Amima logo" height="45" width="45"></a>
+      <a class="navbar-brand logo" href="/">
+<!--        <img src="assets/icon.png" alt="Amima logo" height="45" width="45">-->
+        <span>Amima</span>
+      </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -37,7 +40,7 @@
                          height="30px" width="30px"
                          alt="Icon"
                          title="See your profile"
-                         data-bs-toggle="collapse" 
+                         data-bs-toggle="collapse"
                          data-bs-target=".navbar-collapse.show">
                   </a>
               </div>
