Change login screen icon

--- a/src/app/modules/pages/login/Login.component.html
+++ b/src/app/modules/pages/login/Login.component.html
@@ -1,5 +1,6 @@
 <div class="login-container">
-  <img class="logo" src ="assets/Logo.png" alt="Amima Logo">
+<!--  <img class="logo" src ="assets/Logo.png" alt="Amima Logo">-->
+  <fa-icon [icon]="faUsers" size="8x" style="color: #0d6efd"></fa-icon>
   <h4 class="greeting">Welcome to the Amima Community</h4>
   <div id="googleBtn"></div>
   <button type="button" class="btn btn-primary fbBtn" (click)="facebookLogin()">
