--- a/src/app/modules/elements/footer/Footer.component.html
+++ b/src/app/modules/elements/footer/Footer.component.html
@@ -1,12 +1,15 @@
 <div class="footer">
   <nav id="nav-1">
-    <img src="assets/amimaLogo.jpeg" alt="Amima" width="50" height="50" style="vertical-align: middle;" margin="10px" >
-    <a class="link-1" (click)="goHome()">Home</a>
-    <a class="link-1" (click)="goAbout()">About</a>
-    <a class="link-1" (click)="goContact()">Contact</a>
-    <p style="color:#C0C0C0; height: 50%;">
-      © 2022 Amima All Rights Reserved
-    </p>
+<!--    <img src="assets/amimaLogo.jpeg" alt="Amima" width="50" height="50" style="vertical-align: middle;" margin="10px" >-->
+    <div style="margin-top: 15px">
+      <a class="link-1" (click)="goHome()">Home</a>
+      <a class="link-1" (click)="goAbout()">About</a>
+      <a class="link-1" (click)="goContact()">Contact</a>
+    </div>
+    <div style="margin-top: 31px;">
+      <p style="color:#C0C0C0; height: 50%;">
+        © 2022 Amima All Rights Reserved
+      </p>
+    </div>
   </nav>
-  
 </div>
