--- a/src/app/modules/pages/login/Login.component.html
+++ b/src/app/modules/pages/login/Login.component.html
@@ -3,7 +3,7 @@
   <fa-icon [icon]="faUsers" size="8x" style="color: #0d6efd"></fa-icon>
   <h4 class="greeting">Welcome to the Amima Community</h4>
   <div id="googleBtn"></div>
-  <button type="button" class="btn btn-primary fbBtn" (click)="facebookLogin()">
+  <button style="display: none;" type="button" class="btn btn-primary fbBtn" (click)="facebookLogin()">
     <fa-icon class="fbBtnIcon" [icon]="faFacebook" size="1x"></fa-icon>Sign in with Facebook
   </button>
 </div>
