--- a/src/app/modules/pages/about_us/AboutUs.component.html
+++ b/src/app/modules/pages/about_us/AboutUs.component.html
@@ -1,55 +1,55 @@
 <div>
-  <div class="topBanner"> 
+  <div class="topBanner">
       <img class="table" src="assets/stock_table.jpg">
-    <h3 class="title">About Us</h3> 
+    <h3 class="title">About Us</h3>
   </div>
   <h4 class="subTitle">What is Amima</h4>
   <div class="descBox">
     <h1 class="description">
       Amima is a community dedicated for people to share online shopping experiences and product reviews.
-      It is a platform that allows you to discover current popular trending products 
-      and browsing through product reviews from other people.
+      It is a platform that allows you to discover current popular trending products
+      and browse through product reviews from other people.
     </h1>
   </div>
   <div class="bigContainer">
-    <div class="container1">
-      <img class="pic1" src="assets/wheel_01.jpg">
-      <h1 class="header1">01 
+    <div class="smallContainer">
+      <img class="pic" src="assets/wheel_01.jpg">
+      <h1 class="header">01
         <br>Product Review
       </h1>
-      <div class="overlay1">
-        <div class="text1">
-          People can gain real feedback products by browsing through product reviews 
+      <div class="overlay">
+        <div class="text">
+          People can get real feedback on products by browsing through product reviews
           and recommendations from other people.
         </div>
       </div>
-    </div>  
-    <div class="container2">
-      <img class="pic2" src="assets/cloths_02.jpg">
-      <h1 class="header2">02
+    </div>
+    <div class="smallContainer">
+      <img class="pic" src="assets/cloths_02.jpg">
+      <h1 class="header">02
         <br>Community
       </h1>
-      <div class="overlay2">
-        <div class="text2">
-          Community for user generated product reviews with product content inspirations 
+      <div class="overlay">
+        <div class="text">
+          A community for user-generated product reviews with product content inspirations
           and for people to discover real product experiences.
         </div>
       </div>
     </div>
-    <div class="container3">
-      <img class="pic3" src="assets/makeup_03.jpg">
-      <h1 class="header3">03 
+    <div class="smallContainer">
+      <img class="pic" src="assets/makeup_03.jpg">
+      <h1 class="header">03
         <br>Content Inspiration
       </h1>
-      <div class="overlay3">
-        <div class="text3">
-          The reviews written by the people on Amima helps to spark consumers interest on the product. 
+      <div class="overlay">
+        <div class="text">
+          The reviews on Amima are written by the users to help spark consumers' interest in the product.
         </div>
       </div>
     </div>
   </div>
 
-  
+
   <h3 class="contactInfo">Contact</h3>
   <div class="descBox">
     <p class="description">
@@ -63,6 +63,6 @@
     <p>
   </div>
 
-  
-  
+
+
 </div>
