Add about us links

--- a/src/app/modules/pages/about_us/AboutUs.component.html
+++ b/src/app/modules/pages/about_us/AboutUs.component.html
@@ -49,20 +49,19 @@
     </div>
   </div>
 
-
   <h3 class="contactInfo">Contact</h3>
   <div class="descBox">
     <p class="description">
-      <p>Email: info@amimalive.com  </p>
       <p>
-        <a href="#"> Instagram</a>
+        <a href="mailto:info@amimalive.com">Email: info@amimalive.com</a>
       </p>
       <p>
-        <a href="#"> Facebook </a>
+        <a href="https://www.instagram.com/amima.ca/">Instagram</a>
+      </p>
+      <p>
+        <a href="https://www.facebook.com/profile.php?id=100070058887555">Facebook </a>
       </p>
     <p>
   </div>
-
-
 
 </div>
