--- a/src/app/modules/pages/profile_page/ProfilePage.component.css
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.css
@@ -5,7 +5,7 @@
   margin-right: auto;
 }
 
-.userInfo{ /*author card*/ 
+.userInfo{ /*author card*/
   border: rgba(179, 185, 179, 0.615);
   border-style: solid;
   width: auto;
@@ -54,13 +54,13 @@
   margin: 5% 10% 5% 10%;
   width: 60%;
 
-  
+
 }
 
 .userPicture img{
   border-radius: 50%;
-  width: 85%;
-  height: 85%;
+  width: 50px;
+  height: 50px;
   float: left;
   box-shadow: beige;
   aspect-ratio: 1/1; /*this changes the ratio*/
