--- a/src/app/modules/elements/card/Card.component.css
+++ b/src/app/modules/elements/card/Card.component.css
@@ -34,6 +34,8 @@
     padding-right: 10px;
     display: -webkit-box;
     text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
     overflow: hidden;
     font-weight: 400;
     margin-top: 10px;
