Number of Lines set to two

--- a/src/app/modules/elements/card/Card.component.css
+++ b/src/app/modules/elements/card/Card.component.css
@@ -39,6 +39,8 @@
     overflow: hidden;
     font-weight: 400;
     margin-top: 10px;
+    line-height: 1.5em;
+    height: 3em;
 }
 
 .productInfo a {
